--- a/devsearch-web-ui/public/styles/app.css
+++ b/devsearch-web-ui/public/styles/app.css
@@ -346,6 +346,14 @@ img {
   font-size: 2.8rem;
   font-weight: 700;
   margin-top: 1rem;
+  margin-bottom: 0.1rem;
+}
+
+.dev__username {
+  color: var(--color-sub-light);
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.3;
   margin-bottom: 0.5rem;
 }
 
