--- a/devsearch-web-ui-keycloak/public/styles/app.css
+++ b/devsearch-web-ui-keycloak/public/styles/app.css
@@ -6,6 +6,10 @@
   background-color: var(--color-sub-light);
 }
 
+.btn--header {
+  font-weight: normal;
+}
+
 .card {
   border: 2px solid var(--color-light);
 }
@@ -53,6 +57,11 @@ img {
 }
 
 .header__menuItem > a {
+  color: var(--color-light);
+  font-weight: 300;
+}
+
+.header__menuItem > button {
   color: var(--color-light);
   font-weight: 300;
 }
