--- a/devsearch-web-ui/public/styles/app.css
+++ b/devsearch-web-ui/public/styles/app.css
@@ -1026,3 +1026,31 @@ img {
   margin-bottom: 1rem;
   margin-top: 2rem;
 }
+
+/*=======================
+  Skill
+========================*/
+.skill__form__field {
+  color: var(--color-sub);
+  margin: 2rem 0rem;
+}
+
+.skill__form__label {
+  font-weight: 500;
+  margin: 2rem 0rem;
+}
+
+.skill__form__input {
+  background-color: white !important;
+}
+
+.skill__form__buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skill__form__button {
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+  border: 0px;
+}
