--- a/devsearch-web-ui/public/styles/app.css
+++ b/devsearch-web-ui/public/styles/app.css
@@ -483,6 +483,10 @@ img {
   font-weight: 500;
 }
 
+.singleProject__developer:hover {
+  text-decoration: underline;
+}
+
 .singleProject__title {
   font-size: 3.6rem;
   font-weight: 700;
@@ -494,6 +498,7 @@ img {
   font-size: 1.4rem;
   font-style: italic;
 }
+
 .project__author:hover {
   text-decoration: underline;
 }
@@ -501,6 +506,10 @@ img {
 .project--rating {
   margin-bottom: 1.6em;
   margin-top: 0.5em;
+}
+
+.project__hover:hover {
+  cursor: pointer;
 }
 
 .singleProject__subtitle {
